# Manim_Animation_Cara_Kerja_Transfomers

./: .gitignore  README.md  manim.cfg  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh
assets/: README.md
scripts/: render_all.py
src/: __init__.py  constants.py
src/components/: __init__.py  attention_net.py  chat_ui.py  layer_stack.py  word_embedder.py
src/scenes/: __init__.py  scene_01_hook.py  scene_02_reframe.py  scene_03_embedding.py  scene_04_attention.py  scene_05_layers.py  scene_06_training.py  scene_07_thinking.py  scene_08_outro.py
src/utils/: __init__.py  animations.py  layouts.py
