[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-cara-kerja-transformers"
version = "1.0.0"
description = "Animasi Manim 3Blue1Brown Style untuk Video Edukasi Cara Kerja Transformers & ChatGPT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "manim>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "pygments>=2.15.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "moviepy>=1.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
